--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Cool Title</title>
   </head>
   <body>
-	  <h1><Hello World/ht>
-    <!-- contents hogehoge -->
+	  <h1><Hello World/h1>
   </body>
 </html>
