--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <title>Cool Title</title>
-  </head>
-  <body>
-	  <h1>Hello World<h1>
-  </body>
+<body>
+<h1>Hello World</h1>
+</body>
 </html>
