--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Patsy Doherty - Home</title>
+        <title>Hitoshi MATSUYAMA</title>
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -30,8 +30,8 @@
    <div class="wrapper">
   	  <div class="col-md-12">
          <!-- Logo -->
-         <div class="brand wow fadeIn" data-wow-delay="0.1s"> Patsy Doherty
-           <div class="title"> - hat designer -  </div>
+         <div class="brand wow fadeIn" data-wow-delay="0.1s"> Hitoshi Matsuyama
+           <div class="title"> Ph.D. student at Nagoya University, Japan  </div>
          </div>
 
          <!-- Navigation -->
@@ -45,8 +45,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <div class="navbar-brand"><a href="#">Patsy Doherty</a>
-                <div class="title"> - hat designer - </div>
+                <div class="navbar-brand"><a href="#"> Hitoshi Matsuyama </a>
+                <div class="title"> Ph.D. student at Nagoya University, Japan </div>
                 </div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
