udemy pic, name

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             <div class="author-box">
                 <img src="myPic.png" alt="Author photo">
-                <p class="author-text">Jackson Gonzalez</p>
+                <p class="author-text">Hitoshi MATSUYAMA</p>
             </div>
             
         </div>
