udemy pic, name

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="clearfix"></div>
             
             <div class="author-box">
-                <img src="myPic.png" alt="Author photo">
+                <img src="myPicture.png" alt="Author photo">
                 <p class="author-text">Hitoshi MATSUYAMA</p>
             </div>
             
