--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav>
                 <div class="row">
                     <ul class="main-nav js--main-nav">
-                        <li><a href="#features">Professional summary</a></li>
+                        <li><a href="#features">Biography</a></li>
                         <li><a href="#works">Research Interest</a></li>
                         <li><a href="#cities">Publication</a></li>
                         <li><a href="#plans">Education</a></li>
@@ -33,9 +33,9 @@
         
         <section class="section-features js--section-features" id="features">
             <div class="row">
-                <h2>Professional Summary</h2>
+                <h2>Biography</h2>
                 <p class="long-copy">
-                    Hitoshi Matsuyama is a Ph.D. student studying information, computer science and artificial intelligence at Nagoya University. He has started up a novel research on ballroom dance performance recognition and evaluation.
+                    Hitoshi Matsuyama is a Ph.D. student studying information and communication engineering at Nagoya University. He has started up a novel research on ballroom dance performance recognition and evaluation. Also adopted by DII Collaborative Graduate Program for Accelerating Innovation in Future Electronics, Ministry of Education.
                 </p>
             </div>   
         </section>
@@ -93,6 +93,7 @@
             <div class="education">
                 <ul>
                 <li>Ph.D. student (Information and Communication Engineering), &nbsp;Nagoya University, &nbsp;2020 -</li>
+                <li>DII Collaborative Graduate Program for Accelerating Innovation in Future Electronics, &nbsp;Ministry of Education and Nagoya University, &nbsp;2018 -</li>
                 <li>Master (Information and Communication Engineering), &nbsp;Nagoya University, &nbsp;2018 - 2020</li>
                 <li>Bachelor (Information Engineering), &nbsp;Nagoya University (Aichi, Japan), &nbsp;2014 - 2018</li>
                 </ul>
