--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <h2>Contact</h2>
             </div>
             <div class="author-box">
-            <img src="resources/img/myPicture.png" alt=MyPic width=200>
+            <img src="resources/img/talk.png" alt=MyPic width=200>
             <p class="author-text">Hitoshi Matsuyama</p>
             <p class="author-email">email: hitoshi[_at_]ucl.nuee.nagoya-u.ac.jp &nbsp;OR &nbsp;matsuyhit[_at_]gmail.com</p>
             </div>
