--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <h2>Biography</h2>
                 <p class="long-copy">
-                    Hitoshi Matsuyama is a Ph.D. student studying information and communication engineering at Nagoya University. He has started up a novel research on ballroom dance performance recognition and evaluation. Also adopted by DII Collaborative Graduate Program for Accelerating Innovation in Future Electronics, Ministry of Education.
+                    Hitoshi Matsuyama is a Ph.D. student studying information and communication engineering at Nagoya University. He has started up a novel research on ballroom dance performance recognition and evaluation. Also adopted by DII Collaborative Graduate Program for Accelerating Innovation in Future Electronics, Ministry of Education. For more detail, please check: (https://www.linkedin.com/in/hitoshi-matsuyama-776982199/)
                 </p>
             </div>   
         </section>
@@ -51,11 +51,11 @@
                 <div class="col span-1-of-2 steps-box">
                     <div class="works-step clearfix">
                         <div>1</div>
-                        <p>Ballroom dance figure classification with ML/DL utilizing multi-modal sensor</p>
+                        <p>Activity recognition with ML/DL utilizing multi-modal sensors</p>
                     </div>
                     <div class="works-step clearfix">
                         <div>2</div>
-                        <p>Dance performance scoring and evaluation algorithm</p>
+                        <p>Dance performance analysis</p>
                     </div>
                     <div class="works-step clearfix">
                         <div>3</div>
@@ -70,11 +70,12 @@
         
         <section class="section-cities" id="cities">
             <div class="row">
-                <h2>Publication</h2>
+                <h2>Publication (International)</h2>
             </div>
             <div class="publication">
                 <ul>
-                    <li>A Basic Study on Ballroom Dance Figure Classification with LSTM using Multi-modal Sensors, H. Matsuyama et al., Joint International Conference on ICIEV, IVPR and ABC, 2020 (To be published)</li>
+                    <li>Nurse care activity recognition challenge: a comparative verification of multiple preprocessing approaches</li>
+                    <li>A Basic Study on Ballroom Dance Figure Classification with LSTM using Multi-modal Sensors, H. Matsuyama et al., Joint International Conference on ICIEV, IVPR and ABC, 2020 </li>
                     <li>Ballroom Dance Step Type Recognition with Random Forest using Video and Wearable Sensor, H. Matsuyama et al., Ubicomp/ISWC’19 Adjunct, 2019</li>
                     <li>Hybrid Activity Recognition for Ballroom Dance Exercise using Video and Wearable Sensor, H. Matsuyama et al., Joint International Conference on ICIEV, IVPR and ABC, 2019</li>
                     <li>Short Segment Random Forest with Post Processing Using Label Constraint for SHL Challenge, H. Matsuyama et al., Ubicomp’18, 2018</li>
