--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <div class="education">
                 <ul>
                 <li>Ph.D. student (Information and Communication Engineering), &nbsp;Nagoya University, &nbsp;2020 -</li>
+                <li>Summer Data Science Program (Online), &nbsp;North Carolina State University, &nbsp;July, 2020</li>
                 <li>DII Collaborative Graduate Program for Accelerating Innovation in Future Electronics, &nbsp;Ministry of Education and Nagoya University, &nbsp;2018 -</li>
                 <li>Master (Information and Communication Engineering), &nbsp;Nagoya University, &nbsp;2018 - 2020</li>
                 <li>Bachelor (Information Engineering), &nbsp;Nagoya University (Aichi, Japan), &nbsp;2014 - 2018</li>
