--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             </div>
             <div class="publication">
                 <ul>
-                    <li>Nurse care activity recognition challenge: a comparative verification of multiple preprocessing approaches</li>
+                    <li>Nurse care activity recognition challenge: a comparative verification of multiple preprocessing approaches, H. Matsuyama et al., HASCA at Ubicomp/ISWC’20 Adjunct, 2020</li>
                     <li>A Basic Study on Ballroom Dance Figure Classification with LSTM using Multi-modal Sensors, H. Matsuyama et al., Joint International Conference on ICIEV, IVPR and ABC, 2020 </li>
-                    <li>Ballroom Dance Step Type Recognition with Random Forest using Video and Wearable Sensor, H. Matsuyama et al., Ubicomp/ISWC’19 Adjunct, 2019</li>
+                    <li>Ballroom Dance Step Type Recognition with Random Forest using Video and Wearable Sensor, H. Matsuyama et al., HASCA at Ubicomp/ISWC’19 Adjunct, 2019</li>
                     <li>Hybrid Activity Recognition for Ballroom Dance Exercise using Video and Wearable Sensor, H. Matsuyama et al., Joint International Conference on ICIEV, IVPR and ABC, 2019</li>
-                    <li>Short Segment Random Forest with Post Processing Using Label Constraint for SHL Challenge, H. Matsuyama et al., Ubicomp’18, 2018</li>
+                    <li>Short Segment Random Forest with Post Processing Using Label Constraint for SHL Challenge, H. Matsuyama et al., HASCA at Ubicomp’18, 2018</li>
                 </ul>
                 
                 
