add publication...ieee sensors

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             </div>
             <div class="publication">
                 <ul>
+                    <li>Hitoshi Matsuyama, Shunsuke Aoki, Takuro Yonezawa, Kei Hiroi, Katsuhiko Kaji, and Nobuo Kawaguchi. Deep Learning for Ballroom Dance Recognition: A Performance Classification Model with Three-dimensional Body Joints and Wearable Senssing. IEEE Sensors Journal, 2021 December. [In press] </li>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. A Basic Study on Ballroom Dance Figure Classification with LSTM Using Multi-modal Sensor. Activity and Behavior Computing 2020. pp 209-226. </li>
                     <li>Hitoshi Matsuyama, Takuto Yoshida, Nozomi Hayashida, Yuto Fukushima, Takuro Yonezawa, Nobuo Kawaguchi. Nurse care activity recognition challenge: a comparative verification of multiple preprocessing approaches. Adjunct Proceedings of the 2020 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2020 ACM International Symposium on Wearable Computers. pp 414-418. </li>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, and Nobuo Kawaguchi. 2019. Ballroom dance step type recognition by random forest using video and wearable sensor. In Adjunct Proceedings of the 2019 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2019 ACM International Symposium on Wearable Computers (UbiComp/ISWC '19 Adjunct). pp 774–780.</li>
