add publication detail

--- a/index.html
+++ b/index.html
@@ -85,11 +85,14 @@
             </div>
             <div class="publication">
                 <ul>
+                    <b>Journal</b>
                     <li>Hitoshi Matsuyama, Shunsuke Aoki, Takuro Yonezawa, Kei Hiroi, Katsuhiko Kaji, and Nobuo Kawaguchi. Deep Learning for Ballroom Dance Recognition: A Performance Classification Model with Three-dimensional Body Joints and Wearable Senssing. IEEE Sensors Journal, 2021 December. [In press] </li>
+                    <b>Conference</b>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. A Basic Study on Ballroom Dance Figure Classification with LSTM Using Multi-modal Sensor. Activity and Behavior Computing 2020. pp 209-226. </li>
+                    <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. Hybrid Activity Recognition for Ballroom Dance Exercise using Video and Wearable Sensor. 2019 Joint 8th International Conference on Informatics, Electronics & Vision (ICIEV) and 2019 3rd International Conference on Imaging, Vision & Pattern Recognition (icIVPR) 2019. pp. 112-117.</li>
+                    <b>Workshop</b>
                     <li>Hitoshi Matsuyama, Takuto Yoshida, Nozomi Hayashida, Yuto Fukushima, Takuro Yonezawa, Nobuo Kawaguchi. Nurse care activity recognition challenge: a comparative verification of multiple preprocessing approaches. Adjunct Proceedings of the 2020 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2020 ACM International Symposium on Wearable Computers. pp 414-418. </li>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, and Nobuo Kawaguchi. 2019. Ballroom dance step type recognition by random forest using video and wearable sensor. In Adjunct Proceedings of the 2019 ACM International Joint Conference on Pervasive and Ubiquitous Computing and Proceedings of the 2019 ACM International Symposium on Wearable Computers (UbiComp/ISWC '19 Adjunct). pp 774–780.</li>
-                    <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. Hybrid Activity Recognition for Ballroom Dance Exercise using Video and Wearable Sensor. 2019 Joint 8th International Conference on Informatics, Electronics & Vision (ICIEV) and 2019 3rd International Conference on Imaging, Vision & Pattern Recognition (icIVPR) 2019. pp. 112-117.</li>
                     <li>Hitoshi Matsuyama, Kenta Urano, Kei Hiroi, Katsuhiko Kaji, and Nobuo Kawaguchi. 2018. Short Segment Random Forest with Post Processing Using Label Constraint for SHL Recognition Challenge. In Proceedings of the 2018 ACM International Joint Conference and 2018 International Symposium on Pervasive and Ubiquitous Computing and Wearable Computers (UbiComp '18).</li>
                 </ul>
                 
@@ -103,7 +106,9 @@
             </div>
             <div class="publication">
                 <ul>
+                    <b>論文誌</b>
                     <li>松山仁， 浦野健太， 廣井慧， 梶克彦， 米澤拓郎， 河口信夫. 社交ダンスの動作特性を考慮したマルチモーダルセンサによるダンスフィガー認識. 情報処理学会 論文誌. 2020年 10月. pp 1591-1604. </li>
+                    <b>研究会等</b>
                     <li>浦野健太，松山仁， 湯木 悠太，野崎 惇登，廣井慧， 梶克彦，河口信夫. ランダムフォレストとルールベース処理を用いた大規模スマートフォンデータに対する行動認識．HCGシンポジウム．</li>
                     <li>松山仁， 廣井慧， 梶克彦， 米澤拓郎， 河口信夫. マルチモーダル社交ダンス認識における従来手法と深層学習の比較評価. MBL/UBI 研究会. issue 32. pp 1-2. 2020年 2月． </li>
                 </ul>
