--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="publication">
                 <ul>
                     <b>Journal</b>
-                    <li>Hitoshi Matsuyama, Shunsuke Aoki, Takuro Yonezawa, Kei Hiroi, Katsuhiko Kaji, and Nobuo Kawaguchi. Deep Learning for Ballroom Dance Recognition: A Performance Classification Model with Three-dimensional Body Joints and Wearable Senssing. IEEE Sensors Journal, 2021 December. [In press] </li>
+                    <li>Hitoshi Matsuyama, Shunsuke Aoki, Takuro Yonezawa, Kei Hiroi, Katsuhiko Kaji, and Nobuo Kawaguchi. Deep Learning for Ballroom Dance Recognition: A Performance Classification Model with Three-dimensional Body Joints and Wearable Sensing. IEEE Sensors Journal, 2021 December. [In press] </li>
                     <b>Conference</b>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. A Basic Study on Ballroom Dance Figure Classification with LSTM Using Multi-modal Sensor. Activity and Behavior Computing 2020. pp 209-226. </li>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. Hybrid Activity Recognition for Ballroom Dance Exercise using Video and Wearable Sensor. 2019 Joint 8th International Conference on Informatics, Electronics & Vision (ICIEV) and 2019 3rd International Conference on Imaging, Vision & Pattern Recognition (icIVPR) 2019. pp. 112-117.</li>
