--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </nav>
             <div class="hero-text-box">
-                <h1>Hitoshi Matsuyama<br>ph.d. student <br> nagoya university</h1>
+                <h1>Hitoshi Matsuyama<br>ph.d.</h1>
             </div>
             
         </header>
@@ -35,7 +35,7 @@
             <div class="row">
                 <h2>Biography</h2>
                 <p class="long-copy">
-                    Hitoshi Matsuyama (松山 仁, 名古屋大学) is a Ph.D. student studying information and communication engineering at Nagoya University. His research interest lies in HCI and Ubicomp, especially for sports/dance analysis and learning. DII Collaborative Graduate Program for Accelerating Innovation in Future Electronics, Ministry of Education adopts him as the 1st-batch student of the program. He is currently working on the dance x XAI project at the National University of Singapore.
+                    Hitoshi Matsuyama / 松山 仁 received his degree of doctor of engineering at Nagoya University, Japan in Sept 2022. His research interest lies in HCI, Ubiquitous computing, Computer Vision, and Recommender Systems. He is currently working as a machine learning engineer at Recruit Co., Ltd. 
                 </p>
             </div>   
         </section>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="works-step clearfix">
                         <div>2</div>
-                        <p>Machine Learning Techniques for Action Class Recognition</p>
+                        <p>Recommender Systems</p>
                     </div>
                     <div class="works-step clearfix">
                         <div>3</div>
@@ -91,6 +91,7 @@
                     <b>Journal</b>
                     <li>Hitoshi Matsuyama, Shunsuke Aoki, Takuro Yonezawa, Kei Hiroi, Katsuhiko Kaji, and Nobuo Kawaguchi. Deep Learning for Ballroom Dance Recognition: A Performance Classification Model with Three-dimensional Body Joints and Wearable Sensing. IEEE Sensors Journal, 2021 December. [Accepeted/Early Access Available] </li>
                     <b>Conference</b>
+                    <li>Hitoshi Matsuyama, Nobuo Kawaguchi, and Brian Y. Lim. IRIS: Interpretable Rubric-Informed Segmentation for Action Quality Assessment. In Proceedings of the 28th Annual Conference on Intelligent User Interface (IUI23). </li>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. A Basic Study on Ballroom Dance Figure Classification with LSTM Using Multi-modal Sensor. Activity and Behavior Computing 2020. pp 209-226. </li>
                     <li>Hitoshi Matsuyama, Kei Hiroi, Katsuhiko Kaji, Takuro Yonezawa, Nobuo Kawaguchi. Hybrid Activity Recognition for Ballroom Dance Exercise using Video and Wearable Sensor. 2019 Joint 8th International Conference on Informatics, Electronics & Vision (ICIEV) and 2019 3rd International Conference on Imaging, Vision & Pattern Recognition (icIVPR) 2019. pp. 112-117.</li>
                     <b>Workshop</b>
@@ -183,7 +184,7 @@
             <div class="education">
                 <ul>
                 
-                <li>Ph.D. student (Information and Communication Engineering), &nbsp;Nagoya University, &nbsp;2020 -</li>
+                <li>Doctor (Information and Communication Engineering), &nbsp;Nagoya University, &nbsp;2020 - 2022</li>
                 <li>Master (Information and Communication Engineering), &nbsp;Nagoya University, &nbsp;2018 - 2020</li>
                 <li>Bachelor (Information Engineering), &nbsp;Nagoya University (Aichi, Japan), &nbsp;2014 - 2018</li>
                 </ul>
